--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,12 +16,17 @@
     "npm": ">=10.8.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "lint-staged": "^15.2.10",
-    "next": "14.2.15",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.3",
+    "next": "^15.0.2",
+    "next-auth": "^4.24.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
