--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": ">=10.8.1"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.2",
     "bcryptjs": "^2.4.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -26,6 +27,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^11.0.2",
     "validator": "^13.12.0"
   },
   "devDependencies": {
