--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "uuid": "^11.0.2",
     "validator": "^13.12.0"
   },
