--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.2",
+    "@upstash/redis": "^1.34.3",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "formidable": "^3.5.2",
     "lint-staged": "^15.2.10",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.7.3",
+    "mongoose": "^8.8.1",
     "next": "^15.0.2",
     "next-auth": "^4.24.10",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
+    "reactjs-popup": "^2.0.6",
+    "recharts": "^2.13.3",
     "uuid": "^11.0.2",
     "validator": "^13.12.0"
   },
