--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "formidable": "^3.5.2",
+    "ioredis": "^5.4.1",
     "lint-staged": "^15.2.10",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
