--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,6 +15,13 @@
     "node": ">=20.16.0",
     "npm": ">=10.8.1"
   },
+  "exports": {
+    "./db": "./src/lib/db.js",
+    "./modals": {
+      "import": "./src/modals/index.js",
+      "require": "./src/modals/index.js"
+    }
+  },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.2",
     "@upstash/redis": "^1.34.3",
