--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -1,23 +1,37 @@
 {
   "name": "@ecommerce/store",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@ecommerce/admin": "^0.1.0",
+    "@tanstack/react-query": "^5.62.7",
+    "axios": "^1.7.8",
+    "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
+    "heroicons": "^2.2.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
+    "net": "^1.0.2",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "turbo": "^2.3.3"
+    "next-auth": "^5.0.0-beta.25",
+    "react": "18",
+    "react-dom": "18",
+    "turbo": "^2.3.3",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prettier": "^3.4.1",
     "tailwindcss": "^3.4.1"
   }
 }
