--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "dev": "turbo run dev",
-     "prettier": "turbo run prettier",
-     "lint": "turbo run lint"
+    "dev": "turbo run dev",
+    "prettier": "turbo run prettier",
+    "lint": "turbo run lint"
   },
-  "workspaces":["./apps/*"],
+  "workspaces": [
+    "./apps/*"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "made by roshanahamed23 - github",
-  "packageManager": "npm@10.8.1"
+  "packageManager": "npm@10.8.1",
+  "dependencies": {
+    "bcryptjs": "^2.4.3"
+  }
 }
