--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -11,13 +11,15 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@ecommerce/admin": "^0.1.0",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "child_process": "^1.0.2",
     "heroicons": "^2.2.0",
-    "mongodb": "^6.11.0",
+    "lucide-react": "^0.468.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.8.3",
     "net": "^1.0.2",
     "next": "15.0.3",
