--- a/turbo.json
+++ b/turbo.json
@@ -1,15 +1,20 @@
 {
-    "$schema": "https://turbo.build/schema.json",
-    "tasks": {
-        "dev":{
-            "cache":false,
-            "persistent": true
-        },
-        "prettier":{
-            "cache": false
-        },
-        "lint": {
-			"dependsOn": ["^lint"]
-		}
+  "$schema": "https://turbo.build/schema.json",
+  "tasks": {
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
+    "prettier": {
+      "cache": false
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": [".next/**", "!.next/cache/**"]
     }
+  }
 }
