--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,22 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "env": [
+        "NEXTAUTH_URL",
+        "NEXTAUTH_SECRET",
+        "GITHUB_ID",
+        "GITHUB_SECRET",
+        "DATABASE_URL",
+        "CLOUDINARY_CLOUDNAME",
+        "CLOUDINARY_APIKEY",
+        "CLOUDINARY_APISECRET",
+        "UPSTASH_URL",
+        "REDIS_URL",
+        "REDIS_TOKEN",
+        "AUTH_SECRET",
+        "AUTH_GOOGLE_ID",
+        "AUTH_GOOGLE_SECRET"
+      ],
       "outputs": [".next/**", "!.next/cache/**"]
     }
   }
