--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "lucide-react": "^0.469.0",
+    "prop-types": "^15.8.1",
     "uuid": "^11.0.3"
   }
 }
